tests/reference/pass_print_list-print_02-d2853f6.stderr
semantic error: Variable 'a' not declared
  --> tests/../integration_tests/print_02.py:10:11
   |
10 |     print(a)
   |           ^ 
